# simple-hr-system

./: .gitignore
backend/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  run.sh  test-ci.sh  tox.ini
backend/candidates/: admin.py  models.py  serializers.py  urls.py  views.py
backend/candidates/migrations/: 0001_initial.py
backend/common/: middleware.py  models.py  permissions.py  storage.py  urls.py  utils.py  views.py
backend/common/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/tests/: factories.py  settings.py
backend/tests/candidates/: __init__.py  test_models.py  test_serializers.py  test_views.py
backend/tests/common/: __init__.py  test_models.py  test_permissions.py  test_utils.py  test_views.py  test_views_simple.py
frontend/: .env.example  DEBUG_GUIDE.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: FileUploadStep.tsx  RegistrationFormStep.tsx  RegistrationSuccess.tsx  StatusUpdateModal.tsx
frontend/src/pages/: AdminDashboard.tsx  CandidatePortal.tsx  Index.tsx  StatusChecker.tsx
